--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ button:hover{
 <div class="contactIcon"><i class="fa-solid fa-cake-candles"></i></div>
 <div>
 <div class="contactLabel">DATE OF BIRTH</div>
-<div class="contactValue">20 August 2003</div>
+<div class="contactValue">30 April 2004</div>
 </div>
 </div>
 
@@ -352,7 +352,7 @@ button:hover{
 <div class="socialTitle">CONNECT</div>
 
 <div class="social">
-<div class="icon" onclick="window.open('mailto:yourmail@gmail.com')">
+<div class="icon" onclick="window.open('mailto:mahajanbhushan2005@gmail.com')">
 <i class="fa-solid fa-envelope"></i>
 </div>
 
@@ -360,7 +360,7 @@ button:hover{
 <i class="fa-brands fa-github"></i>
 </div>
 
-<div class="icon" onclick="window.open('https://linkedin.com/in/yourprofile')">
+<div class="icon" onclick="window.open('https://linkedin.com/in/bhushanmahajan2005')">
 <i class="fa-brands fa-linkedin"></i>
 </div>
 </div>
