--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 <title>Bhushan Mahajan | Cloud & DevOps</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
 
 body{
  margin:0;
- background:#000000;
- color:#bbbbbb;
+ background:#0d0d0f;
+ color:#e6e6e6;
  font-family:'Inter',sans-serif;
  display:flex;
  justify-content:center;
@@ -33,25 +32,24 @@ body{
 /* LEFT PANEL */
 .sidebar{
  width:270px;
- background:linear-gradient(180deg,#0c0c0c,#000);
- border:1px solid #1f1f1f;
+ background:#211f1ffc;
+ border:1px solid #2a2a2d;
  border-radius:22px;
- padding:32px 26px 32px 26px;
+ padding:32px 26px;
  display:flex;
  flex-direction:column;
  position:sticky;
  top:35px;
  height:88vh;
- box-shadow:0 0 40px rgba(255,255,255,0.05);
+ box-shadow:0 0 35px rgba(0,0,0,.6);
  transition:.3s;
 }
 
 .sidebar:hover{
- box-shadow:0 0 55px rgba(255,255,255,0.12);
+ box-shadow:0 0 55px rgba(0,0,0,.9);
 }
 
-/* ================= PROFILE CLEAN ================= */
-
+/* PROFILE */
 .profileBox{
  width:170px;
  height:170px;
@@ -61,46 +59,38 @@ body{
 .profileImage{
  width:170px;
  height:170px;
- border-radius:50%;
+ border-radius:14px;
  object-fit:cover;
- border:3px solid #888;
- box-shadow:0 0 35px rgba(255,255,255,0.15);
- transition:.3s;
+ border:2px solid #2c231d;
 }
 
-.profileImage:hover{
- transform:scale(1.03);
- box-shadow:0 0 45px rgba(255,255,255,0.35);
-}
-
-/* -------- TEXT BELOW IMAGE -------- */
-
+/* TEXT */
 .profileBelow{
  text-align:center;
  margin-top:12px;
 }
 
 .pname{
- display:block;
  font-size:18px;
  font-weight:900;
  color:#ffffff;
- letter-spacing:.3px;
 }
 
 .prole{
- display:block;
  font-size:12px;
- color:#bfbfbf;
- margin-top:2px;
+ color:#c9c9c9;
+ background:#1c1d21;
+ padding:6px 12px;
+ border-radius:10px;
+ display:inline-block;
+ margin-top:6px;
 }
 
-/* ================================================== */
-
+/* DIVIDER */
 .divider{
  width:100%;
  height:1px;
- background:#1f1f1f;
+ background:#2c2c2f;
  border-radius:20px;
  margin:28px 0 18px 0;
 }
@@ -119,22 +109,22 @@ body{
 }
 
 .contactIcon{
- width:34px;
- height:34px;
+ width:36px;
+ height:36px;
  border-radius:10px;
- background:#111;
- border:1px solid #2a2a2a;
+ background:#1b1c20;
+ border:1px solid #2f2f32;
  display:flex;
  justify-content:center;
  align-items:center;
  font-size:16px;
- color:#aaaaaa;
+ color:#f1c451;
 }
 
 .contactLabel{
  font-size:10px;
  letter-spacing:1px;
- color:#8c8c8c;
+ color:#bdbdbd;
 }
 
 .contactValue{
@@ -155,7 +145,7 @@ body{
 .socialTitle{
  margin-top:20px;
  font-size:11px;
- color:#9c9c9c;
+ color:#cfcfcf;
  letter-spacing:1px;
 }
 
@@ -168,20 +158,20 @@ body{
 .icon{
  width:38px;
  height:38px;
- background:#111;
- border:1px solid #2a2a2a;
+ background:#1b1c20;
+ border:1px solid #2f2f32;
  border-radius:12px;
  display:flex;
  justify-content:center;
  align-items:center;
  cursor:pointer;
  font-size:18px;
- color:#bfbfbf;
+ color:#eccc5c;
  transition:0.25s;
 }
 
 .icon:hover{
- background:#ffffff;
+ background:#eccc5c;
  color:#000;
  transform:translateY(-3px);
 }
@@ -192,8 +182,8 @@ body{
 }
 
 .section{
- background:#0a0a0a;
- border:1px solid #1f1f1f;
+ background:#211f1ffc;
+ border:1px solid #2a2a2d;
  border-radius:22px;
  padding:34px;
  margin-bottom:32px;
@@ -201,32 +191,30 @@ body{
 }
 
 .section:hover{
- border:1px solid #888;
- box-shadow:0 0 50px rgba(255,255,255,0.08);
+ border:1px solid #3a3a3d;
+ box-shadow:0 0 40px rgba(0,0,0,.7);
 }
 
 .section h2{
  margin:0 0 8px 0;
  font-size:22px;
  color:#ffffff;
- letter-spacing:.5px;
  position:relative;
 }
 
 .section h2::after{
  content:"";
  width:60px;
- height:2px;
- background:white;
+ height:3px;
+ background:#f1c451;
  position:absolute;
  bottom:-6px;
  left:0;
  border-radius:20px;
- opacity:.8;
 }
 
 .section p{
- color:#c8c8c8;
+ color:#d6d6d6;
  line-height:1.9;
  font-size:14.5px;
 }
@@ -239,26 +227,26 @@ body{
 }
 
 .card{
- background:#111;
- border:1px solid #1f1f1f;
+ background:#211f1ffc;
+ border:1px solid #0a0a10;
  border-radius:16px;
  padding:18px;
- color:#dcdcdc;
+ color:#ffffff;
  transition:.25s;
 }
 
 .card:hover{
  transform:translateY(-4px);
- border:1px solid #787878;
- box-shadow:0 0 40px rgba(255,255,255,0.12);
+ border:1px solid #f1c451;
+ box-shadow:0 0 30px rgba(0,0,0,.7);
 }
 
 .tag{
- background:#1c1c1c;
+ background:#1d1e22;
  padding:6px 12px;
- border-radius:50px;
- border:1px solid #333;
- color:#cfcfcf;
+ border-radius:40px;
+ border:1px solid #3a3a3d;
+ color:#f1c451;
  font-size:12px;
  margin-right:6px;
 }
@@ -266,8 +254,8 @@ body{
 button{
  padding:10px 16px;
  border-radius:8px;
- border:none;
- background:#2c2c2c;
+ border:1px solid #f1c451;
+ background:#1d1e22;
  color:white;
  cursor:pointer;
  margin-top:10px;
@@ -275,7 +263,7 @@ button{
 }
 
 button:hover{
- background:#ffffff;
+ background:#f1c451;
  color:#000;
  transform:translateY(-2px);
 }
@@ -283,11 +271,7 @@ button:hover{
 /* MOBILE */
 @media(max-width:950px){
  .container{flex-direction:column;}
- .sidebar{
-  width:100%;
-  height:auto;
-  position:relative;
- }
+ .sidebar{width:100%;height:auto;position:relative;}
 }
 
 </style>
@@ -367,13 +351,11 @@ button:hover{
 
 </div>
 
-
 <!-- RIGHT CONTENT -->
 <div class="content">
 
 <div class="section">
 <h2>About</h2>
-
 <p>
 I love building fast, scalable, and automated cloud systems that just work. As a Cloud & DevOps Engineer in progress, I focus on creating infrastructures that are stable, efficient, and as hands-off as possible through automation. I believe in learning by doing, taking ownership, and moving fast—many decisions are reversible, so I don’t overthink. I execute, experiment, fix what breaks, and never say, “That’s not my job.”
 <br><br>
@@ -382,7 +364,6 @@ With growing expertise in AWS, Kubernetes, Docker, CI/CD and Infrastructure as C
 Outside of tech, I love exploring new places, meeting new people, and staying curious about life.<br>
 “I love deep-diving into cloud architectures, but I also enjoy a good conversation over a cup of Chai.”
 </p>
-
 </div>
 
 <div class="section">
@@ -418,9 +399,7 @@ Outside of tech, I love exploring new places, meeting new people, and staying cu
 
 <div class="card">
 <b>AWS Three Tier Web Architecture</b>
-<p>
-Designed and deployed scalable AWS architecture including networking & DB.
-</p>
+<p>Designed and deployed scalable AWS architecture...</p>
 <span class="tag">AWS</span><span class="tag">VPC</span><span class="tag">RDS</span><br>
 <button>View Project</button>
 </div>
@@ -429,9 +408,7 @@ Designed and deployed scalable AWS architecture including networking & DB.
 
 <div class="card">
 <b>Serverless CRUD API</b>
-<p>
-Built backend using Lambda, API Gateway & DynamoDB
-</p>
+<p>Backend using Lambda, API Gateway & DynamoDB</p>
 <span class="tag">Lambda</span><span class="tag">API Gateway</span><span class="tag">DynamoDB</span><br>
 <button>View Project</button>
 </div>
@@ -440,14 +417,10 @@ Built backend using Lambda, API Gateway & DynamoDB
 
 <div class="section">
 <h2>Journey</h2>
-<p>
-BCA Graduate → Pursuing MCA → Growing into Cloud & DevOps Professional
-</p>
+<p>BCA Graduate → Pursuing MCA → Cloud & DevOps Professional</p>
 </div>
 
 </div>
-
 </div>
-
 </body>
 </html>
